Implement reconciliation
